Added start menu, camera transition, train controls

--- a/indexV2.html
+++ b/indexV2.html
@@ -50,7 +50,7 @@
         </div>
         <!-- information card -->
         <div class="row">
-            <div id="info-card" class="card-container popShow col-sm-12 ">
+            <div id="info-card" class="card-container popHide col-sm-12 ">
                 <div class="col-sm-12 d-md-none d-lg-none d-xl-none" id="mobile-question"></div>
                 <div class="card-top">
                     <!-- <span id="x-button"
@@ -70,6 +70,24 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div class="d-flex flex-lg-row justify-content-around flex-column" id="question-menu">
+            <div data-id="0" class="question-box">
+                A
+            </div>
+            <div data-id="1" class="question-box">
+                B
+            </div>
+            <div data-id="2" class="question-box">
+                C 
+            </div>
+            <div data-id="3" class="question-box">
+                D 
+             </div>
+             <div data-id="4" class="question-box">
+                E
+             </div>
         </div>
     </div>
 </body>
