Move to appropriate checkpoint, minimize UI and added blur

--- a/indexV2.html
+++ b/indexV2.html
@@ -30,9 +30,8 @@
             </span>
         </div>
 
-
+        <div id="info-card-container" class="">
         <!-- question card -->
-        <div>
             <div class="question-container-mobile" id="question-container-mobile"></div>
 
             <svg viewBox="0 0 105 105" id="question-container" class="popHide">
@@ -47,25 +46,26 @@
                     <text id="question-card"></text>
                 </foreignObject>
             </svg>
-        </div>
         <!-- information card -->
-        <div class="row">
-            <div id="info-card" class="card-container popHide col-sm-12 ">
-                <div class="col-sm-12 d-md-none d-lg-none d-xl-none" id="mobile-question"></div>
-                <div class="card-top">
-                    <!-- <span id="x-button"
-                        style="cursor: pointer; display:block; float: right;margin-right: 15px; margin-top: 10px;">&#10005;</span> -->
-                    <div class="content" style="margin: 25px; margin-top: 30px;">
-                        <h4 id="title">What are you looking for in your career journey?</h4>
-                        <p id="top-content" class="top-text"></p>
+        
+            <div class="h-100 w-100 d-flex justify-content-center align-items-center">
+                <div id="info-card" class="card-container popHide col-sm-12 col-lg-4 col-md-6">
+                    <div class="col-sm-12 d-md-none d-lg-none d-xl-none" id="mobile-question"></div>
+                    <div class="card-top">
+                        <!-- <span id="x-button"
+                            style="cursor: pointer; display:block; float: right;margin-right: 15px; margin-top: 10px;">&#10005;</span> -->
+                        <div class="content" style="margin: 25px; margin-top: 30px;">
+                            <h4 id="title">What are you looking for in your career journey?</h4>
+                            <p id="top-content" class="top-text"></p>
+                        </div>
                     </div>
-                </div>
-                <div id="card-bottom" class="card-bottom">
-                    <div class="row" id="bottom-row">
-                        <div class="col">
-                            <img id="logo" src="" alt="">
-                            <p id="bot-content" class="bot-content"></p>
-                            <a id="link" href="" target="_blank" class="btn btn-secondary link">Visit Website</a>
+                    <div id="card-bottom" class="card-bottom">
+                        <div class="row" id="bottom-row">
+                            <div class="col">
+                                <img id="logo" src="" alt="">
+                                <p id="bot-content" class="bot-content"></p>
+                                <a id="link" href="" target="_blank" class="btn btn-secondary link">Visit Website</a>
+                            </div>
                         </div>
                     </div>
                 </div>
