--- a/indexV2.html
+++ b/indexV2.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="build/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="Toggle.css">
 </head>
@@ -42,7 +43,7 @@
                 a 15,15 1 0,0 -20,-10 
                 a 25,25 1 0,0 -35,10  
                 z' />
-                <foreignObject x="12" y="61" width="80" height="40" font-size="6px" style="padding: 1px;">
+                <foreignObject x="12" y="61" width="80" height="40" font-size="5px" style="padding: 6px 5px 5px 5px">
                     <text id="question-card"></text>
                 </foreignObject>
             </svg>
@@ -52,8 +53,8 @@
                 <div id="info-card" class="card-container popHide col-sm-12 col-lg-4 col-md-6">
                     <div class="col-sm-12 d-md-none d-lg-none d-xl-none" id="mobile-question"></div>
                     <div class="card-top">
-                        <!-- <span id="x-button"
-                            style="cursor: pointer; display:block; float: right;margin-right: 15px; margin-top: 10px;">&#10005;</span> -->
+                        <span id="x-button"
+                            style="cursor: pointer; display:block; float: right;margin-right: 15px; margin-top: 10px;">&#10005;</span>
                         <div class="content" style="margin: 25px; margin-top: 30px;">
                             <h4 id="title">What are you looking for in your career journey?</h4>
                             <p id="top-content" class="top-text"></p>
@@ -61,7 +62,7 @@
                     </div>
                     <div id="card-bottom" class="card-bottom">
                         <div class="row" id="bottom-row">
-                            <div class="col">
+                            <div class="col d-flex flex-column justify-content-between">
                                 <img id="logo" src="" alt="">
                                 <p id="bot-content" class="bot-content"></p>
                                 <a id="link" href="" target="_blank" class="btn btn-secondary link">Visit Website</a>
@@ -72,22 +73,26 @@
             </div>
         </div>
 
-        <div class="d-flex flex-lg-row justify-content-around flex-column" id="question-menu">
-            <div data-id="0" class="question-box">
-                A
+        <div id="collapseCardBtn" class="d-none raise">
+            <i class="fa fa-window-maximize fa-2x"></i>
+        </div>
+
+        <div class="d-flex flex-lg-row justify-content-lg-around justify-content-center flex-column" id="question-menu">
+            <div data-id="0" class="question-box raise">
+                What are my strengths?
             </div>
-            <div data-id="1" class="question-box">
-                B
+            <div data-id="1" class="question-box raise">
+                What do I want to do?
             </div>
-            <div data-id="2" class="question-box">
-                C 
+            <div data-id="2" class="question-box raise">
+                How do I communicate my strenghts?
             </div>
-            <div data-id="3" class="question-box">
-                D 
-             </div>
-             <div data-id="4" class="question-box">
-                E
-             </div>
+            <div data-id="3" class="question-box raise">
+                How do I build my network?
+            </div>
+            <div data-id="4" class="question-box raise">
+                How do I get a great offer?
+            </div>
         </div>
     </div>
 </body>
