Done with TutorialUI

--- a/indexV2.html
+++ b/indexV2.html
@@ -85,7 +85,7 @@
                 What do I want to do?
             </div>
             <div data-id="2" class="question-box raise">
-                How do I communicate my strenghts?
+                How do I communicate my strengths?
             </div>
             <div data-id="3" class="question-box raise">
                 How do I build my network?
