Complete first beta

--- a/indexV2.html
+++ b/indexV2.html
@@ -23,11 +23,11 @@
         <!-- start slide show for mobile only  -->
         <div id="start-slide">
             <span class="arrows" id="prev-slide">
-                <i class="fa fa-arrow-left" aria-hidden="true" ></i>&nbsp; &nbsp;PREV
+                <i class="fa fa-arrow-left" aria-hidden="true" ></i>&nbsp; &nbsp;Prev
             </span>
             
             <span class="arrows" id="next-slide">
-                 NEXT&nbsp; &nbsp;<i class="fa fa-arrow-right" aria-hidden="true" ></i>
+                 Next&nbsp; &nbsp;<i class="fa fa-arrow-right" aria-hidden="true" ></i>
             </span>
         </div>
 
