--- a/indexV2.html
+++ b/indexV2.html
@@ -37,20 +37,20 @@
 
             <svg viewBox="0 0 105 105" id="question-container" class="popHide">
                 <path d='M 25,60 
-                a 20, 20 1 0,0 0,40 
-                h 50 
-                a 20,20 1 0,0 0,-40 
-                a 15,15 1 0,0 -20,-10 
-                a 25,25 1 0,0 -35,10  
-                z' />
-                <foreignObject x="12" y="61" width="80" height="40" font-size="5px" style="padding: 6px 5px 5px 5px">
-                    <text id="question-card"></text>
-                </foreignObject>
+                    a 20, 20 1 0,0 0,40 
+                    h 50 
+                    a 20,20 1 0,0 0,-40 
+                    a 15,15 1 0,0 -20,-10 
+                    a 25,25 1 0,0 -35,10  
+                    z' />
+                    <foreignObject x="12" y="61" width="80" height="40" font-size="5px" style="padding: 6px 5px 5px 5px;">
+                        <text id="question-card"></text>
+                    </foreignObject>
             </svg>
         <!-- information card -->
         
-            <div class="h-100 w-100 d-flex justify-content-center align-items-center">
-                <div id="info-card" class="card-container popHide col-sm-12 col-lg-4 col-md-6">
+            <div id="info-card-wrapper" class="h-100 w-100 popHide d-flex justify-content-center align-items-center">
+                <div id="info-card" class="card-container col-sm-12 col-lg-4 col-md-6">
                     <div class="col-sm-12 d-md-none d-lg-none d-xl-none" id="mobile-question"></div>
                     <div class="card-top">
                         <span id="x-button"
@@ -74,7 +74,7 @@
         </div>
 
         <div id="collapseCardBtn" class="d-none raise">
-            <i class="fa fa-window-maximize fa-2x"></i>
+            <i class="fa fa-window-maximize fa-3x"></i>
         </div>
 
         <div class="d-flex flex-lg-row justify-content-lg-around justify-content-center flex-column" id="question-menu">
